--- a/01 - Intro to Data.ipynb
+++ b/01 - Intro to Data.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:207987c56973633c6e302d44af55f83dfe9affb35f212699d99416f6be94e526"
+  "signature": "sha256:bd60152f3f7766bb22fc61600f00070cac1571664505892d09c9a943a6f545b9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -137,9 +137,7 @@
       "    1. Database Evolution\n",
       "    2. Normalization\n",
       "    3. Natural and Artificial Keys\n",
-      "    4. Star Schema\n",
-      "2. Lab:\n",
-      "    - SQL"
+      "    4. Star Schema"
      ]
     },
     {
