HW1 - Starter on API

--- a/Homework/HW1.ipynb
+++ b/Homework/HW1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:73e3774cfb01640ee1364669218a5b485101360e74b4be1751abb3c9cfa794ba"
+  "signature": "sha256:ce8a4f5cd2c5c87ff3f28e36a9d653d3af42a3cf3fc24f0c1af46d45b8a63aa7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -46,22 +46,40 @@
       "#### 1. Connect to the SF.Gov API and pull data from the 311 Table\n",
       "https://data.sfgov.org/City-Infrastructure/Case-Data-from-San-Francisco-311-SF311-/vw6y-z8j6\n",
       "\n",
-      "Note: You'll need to sign up for an app token to avoid throttling limits\n",
+      "* 311 data contains over 1.1 Million rows in total. For this exercise, we are only looking to pull the FIRST 1000 rows\n",
+      "\n",
+      "Note: To get more data than 1000 rows, you may need to sign up for an app token to avoid throttling limits\n",
       "http://dev.socrata.com/foundry/#/data.sfgov.org/vw6y-z8j6\n",
       "\n",
-      "hint: use the built in JSON functionality inside python"
+      "We don't need this for the exercise, but something to keep in mind as you work with external APIs"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#YOUR CODE HERE"
+      "# This will get you the first 1000 rows to get started with the rest of the questions\n",
+      "import json\n",
+      "import urllib\n",
+      "\n",
+      "url = \"https://data.sfgov.org/resource/vw6y-z8j6.json\"\n",
+      "data = json.load(urllib.urlopen(url))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#YOUR CODE HERE - Display the first element (row) in data"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
