--- a/03 - Twitter Mongo Lab.ipynb
+++ b/03 - Twitter Mongo Lab.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:266d032b2d42c8a561a69063eb1c75ad6d35ca5d6ba3bf849e1fac99c86a111b"
+  "signature": "sha256:8e79ea8c1436227d050a955b4364c628bf12496c08ad14abf844ea07e0506ab2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -60,7 +59,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -84,6 +83,19 @@
      },
      "source": [
       "Connect to Twitter:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Create a credentials file in your home directory called `api_cred.yml` (based on `DAT_SF_12/dummy_api_cred.yml`) that looks like:\n",
+      "```yaml\n",
+      "API_KEY: your_twitter_key\n",
+      "API_SECRET: your_twitter_secret\n",
+      "ACCESS_TOKEN: your_twitter_access_token\n",
+      "ACCESS_TOKEN_SECRET: your_twitter_access_token_secret\n",
+      "```"
      ]
     },
     {
@@ -470,20 +482,8 @@
        "slide_type": "fragment"
       }
      },
-     "outputs": [
-      {
-       "ename": "ConnectionFailure",
-       "evalue": "[Errno 61] Connection refused",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mConnectionFailure\u001b[0m                         Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-11-fb14cafad3b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMongoClient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m/Users/alessandro.gagliardi/anaconda/lib/python2.7/site-packages/pymongo/mongo_client.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, host, port, max_pool_size, document_class, tz_aware, _connect, **kwargs)\u001b[0m\n\u001b[1;32m    364\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mAutoReconnect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    365\u001b[0m                 \u001b[0;31m# ConnectionFailure makes more sense here than AutoReconnect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 366\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mConnectionFailure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    367\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    368\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0musername\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mConnectionFailure\u001b[0m: [Errno 61] Connection refused"
-       ]
-      }
-     ],
-     "prompt_number": 11
+     "outputs": [],
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
