--- a/07 - Clustering.ipynb
+++ b/07 - Clustering.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:77a1f680f79841742b26c2aca1921e236115785a522d6a2a590e25afe885b160"
+  "signature": "sha256:678f7271c06cd3105ac2f6cd0f4eb1494746fddf451e3cfbf39d292f344a0db7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -966,16 +966,7 @@
      "source": [
       "LAB\n",
       "===\n",
-      "In the `DAT6` folder, from the command line:\n",
-      "```bash\n",
-      "git commit -am ...\n",
-      "git checkout gh-pages\n",
-      "git pull\n",
-      "git checkout personal\n",
-      "git merge gh-pages\n",
-      "ipython notebook\n",
-      "```\n",
-      "Then open `DS_Lab13-Clustering`"
+      "#### [07 - Clustering Lab](07 - Clustering Lab.ipynb)"
      ]
     }
    ],
