add homework 2 and project updates

--- a/Project/ProjData.ipynb
+++ b/Project/ProjData.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5549e5a84cf3ef72848ba0e2e225f839d853e21bf56eb15dbb0aa40ddc568c33"
+  "signature": "sha256:bc448c00fe21fc00e2267469ac7950776acba760807eccb00fed398ee1597e90"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,7 +30,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 309
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -185,6 +185,28 @@
       }
      ],
      "prompt_number": 310
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "df.source.unique()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'df' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-2-9c897c8a2a1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msource\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
